<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".BluetoothActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerHorizontal="true"
        android:weightSum="1">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.00"
            android:id="@+id/statusLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/status"
                android:id="@+id/statusLabel" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/disconnected"
                android:id="@+id/statusText" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/read"
                android:id="@+id/readLabel" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:id="@+id/readField"
                android:layout_weight="1" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/r"
                android:id="@+id/readLabel1" />
            <SeekBar
                android:id="@+id/seekBar1"
                android:layout_weight=".80"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="255"
                android:progress="1"
                android:secondaryProgress="0"
                android:visibility="visible"
                android:layout_width="wrap_content"

                />


            <EditText
                android:id="@+id/editText1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:inputType="number"
                android:text="@string/_0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/g"
                android:id="@+id/readLabel2" />
            <SeekBar
                android:id="@+id/seekBar2"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="255"
                android:progress="1"
                android:secondaryProgress="0"
                android:visibility="visible" />


            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:inputType="number"
                android:text="@string/_0" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/b"
                android:id="@+id/readLabel3" />
            <SeekBar
                android:id="@+id/seekBar3"
                android:layout_width="wrap_content"
                android:layout_weight=".80"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:max="255"
                android:progress="1"
                android:secondaryProgress="0"
                android:visibility="visible" />


            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".20"
                android:inputType="number"
                android:text="@string/_0" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:id="@+id/writeLayout"
            android:weightSum="1">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/write"
                android:id="@+id/writeButton"
                android:onClick="writeButtonPressed"
                android:clickable="true" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/connect"
                android:id="@+id/connectButton"
                android:layout_weight="0.58"
                android:onClick="connectButtonPressed" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/disconnect"
                android:id="@+id/disconnectButton"
                android:layout_weight="0.52"
                android:onClick="disconnectButtonPressed" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
